-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 21.0.10-oracle, 23, 24
-
Component/s: client-libs
-
b04
-
generic
-
windows
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8373861 | 11.0.31-oracle | Joakim Nordström | P2 | Closed | Fixed | b01 |
| JDK-8335412 | 23.0.1 | Prasanta Sadhukhan | P2 | Resolved | Fixed | b02 |
| JDK-8334882 | 23 | Prasanta Sadhukhan | P2 | Closed | Fixed | b29 |
| JDK-8369990 | 21.0.10-oracle | Joakim Nordström | P2 | Closed | Fixed | b03 |
| JDK-8371022 | 21.0.10 | Goetz Lindenmaier | P2 | Resolved | Fixed | b01 |
| JDK-8370323 | 17.0.18-oracle | Joakim Nordström | P2 | Closed | Fixed | b03 |
- backported by
-
JDK-8335412 Cancelling PageDialog does not return the same PageFormat object
-
- Resolved
-
-
JDK-8371022 Cancelling PageDialog does not return the same PageFormat object
-
- Resolved
-
-
JDK-8334882 Cancelling PageDialog does not return the same PageFormat object
-
- Closed
-
-
JDK-8369990 Cancelling PageDialog does not return the same PageFormat object
-
- Closed
-
-
JDK-8370323 Cancelling PageDialog does not return the same PageFormat object
-
- Closed
-
-
JDK-8373861 Cancelling PageDialog does not return the same PageFormat object
-
- Closed
-
- caused by
-
JDK-8307160 Fix AWT/2D/A11Y to support the permissive- flag on the Microsoft Visual C compiler
-
- Resolved
-
- relates to
-
JDK-8334868 Ensure CheckUninstallModalHook is called in WPageDialogPeer._show
-
- In Progress
-
- links to
-
Commit
openjdk/jdk/689cee3d
-
Commit
openjdk/jdk/fbcf6d9c
-
Commit(master)
openjdk/jdk21u-dev/fd2753ab
-
Review
openjdk/jdk23u/4
-
Review
openjdk/jdk/19786
-
Review
openjdk/jdk/19865
-
Review(master)
openjdk/jdk21u-dev/2424