8334509: Cancelling PageDialog does not return the same PageFormat object

Backport-of: 689cee3d0950e15e88a1f6738bfded00655dca9c